service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: web
  name: web
spec:
  selector:
    app: web
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  type: ClusterIP
status:
  loadBalancer: {}

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web-canary
  name: web-canary
spec:
  selector:
    app: web-canary
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  type: ClusterIP
status:
  loadBalancer: {}
